removed pipe characters on mobile and added github profile to footer, fixes #10

--- a/www/style.css
+++ b/www/style.css
@@ -307,6 +307,10 @@ footer p {
   margin: 0 auto;
 }
 
+@media (max-width: 650px) {
+  footer p {
+    display: block;
+  }
 
 footer a:hover {
   color: white;
